[package]
name = "google_voice_importer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-humanize = "0.2.3"
chrono-tz = "0.9.0"
clap = { version = "4.5.15", features = ["derive"] }
env_logger = "0.11.5"
glob = "0.3.1"
indicatif = "0.17.8"
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.10.6"
scraper = "0.20.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
shellexpand = "3.1.0"
walkdir = "2.5.0"
